fixed overflow space bug

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+html {
+ overflow-x: hidden;
+}
 h1 {
   color: #003366;
   font-family: sans-serif;
